--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,3 +1,3 @@
 Manga translation is a multimodal task that requires both visual understanding and natural language processing.
-To support manual manga translation, this work presents an end-to-end pipeline that assists professional translators by dividing the
+To support manual manga translation, we present an end-to-end pipeline that assists professional translators by dividing the
 process into four main stages: speech bubble segmentation, optical character recognition (OCR), machine translation, and typesetting.
