Add layour analysis and translation

--- a/main.tex
+++ b/main.tex
@@ -195,6 +195,12 @@
 \subsubsection{Post-processing for speech bubbles}
 \input{sections/subsubsections/post-yolo}
 
+\subsubsection{Post-processing for panel detection}
+\input{sections/subsubsections/panel-post-proc}
+
+\subsection{Layout Analysis and Bubble Ordering}
+\input{sections/subsections/layout-analysis}
+
 \subsection{Optical Character Recognition (OCR)}
 \input{sections/subsections/ocr}
 
@@ -213,11 +219,7 @@
 \subsection{Translation}
 \input{sections/subsections/translation}
 
-\subsubsection{Model architecture}
-\input{sections/subsubsections/translation-arch}
 
-\subsubsection{Model variants}
-\input{sections/subsubsections/translation-variants}
 
 \subsection{Typesetting}
 \input{sections/subsections/typeset}
