Add evaluation process description for the whole pipelien and some metrics for bubble ordering

--- a/main.tex
+++ b/main.tex
@@ -234,6 +234,9 @@
 \subsubsection{Translation metrics}
 \input{sections/subsubsections/trans-eval-met}
 
+\subsection{Evaluation Process}
+\input{sections/subsections/evaluation-process}
+
 \section{Results and Evaluation}
 
 \subsection{Bubble Segmentation}
