Add new reference for "Designing the Business Conversation Corpus"

--- a/references.bib
+++ b/references.bib
@@ -526,3 +526,19 @@
     pages = "612--618"
 }
 
+@inproceedings{rikters-etal-2019-designing,
+    title = "Designing the Business Conversation Corpus",
+    author = "Rikters, Mat{\=\i}ss  and
+      Ri, Ryokan  and
+      Li, Tong  and
+      Nakazawa, Toshiaki",
+    booktitle = "Proceedings of the 6th Workshop on Asian Translation",
+    month = nov,
+    year = "2019",
+    address = "Hong Kong, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/D19-5204",
+    doi = "10.18653/v1/D19-5204",
+    pages = "54--61"
+}
+
