Add references for recent NMT evaluation datasets and update evaluation metrics

--- a/references.bib
+++ b/references.bib
@@ -542,3 +542,56 @@
     pages = "54--61"
 }
 
+@inproceedings{zhang-etal-2020-improving,
+    title = "Improving Massively Multilingual Neural Machine Translation and Zero-Shot Translation",
+    author = "Zhang, Biao  and
+      Williams, Philip  and
+      Titov, Ivan  and
+      Sennrich, Rico",
+    editor = "Jurafsky, Dan  and
+      Chai, Joyce  and
+      Schluter, Natalie  and
+      Tetreault, Joel",
+    booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+    month = jul,
+    year = "2020",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2020.acl-main.148",
+    doi = "10.18653/v1/2020.acl-main.148",
+    pages = "1628--1639"
+}
+
+@article{nllb-24,
+    author="{NLLB Team} and Costa-juss{\`a}, Marta R. and Cross, James and {\c{C}}elebi, Onur and Elbayad, Maha and Heafield, Kenneth and Heffernan, Kevin and Kalbassi, Elahe and Lam, Janice and Licht, Daniel and Maillard, Jean and Sun, Anna and Wang, Skyler and Wenzek, Guillaume and Youngblood, Al and Akula, Bapi and Barrault, Loic and Gonzalez, Gabriel Mejia and Hansanti, Prangthip and Hoffman, John and Jarrett, Semarley and Sadagopan, Kaushik Ram and Rowe, Dirk and Spruit, Shannon and Tran, Chau and Andrews, Pierre and Ayan, Necip Fazil and Bhosale, Shruti and Edunov, Sergey and Fan, Angela and Gao, Cynthia and Goswami, Vedanuj and Guzm{\'a}n, Francisco and Koehn, Philipp and Mourachko, Alexandre and Ropers, Christophe and Saleem, Safiyyah and Schwenk, Holger and Wang, Jeff",
+    title="Scaling neural machine translation to 200 languages",
+    journal="Nature",
+    year="2024",
+    volume="630",
+    number="8018",
+    pages="841--846",
+    issn="1476-4687",
+    doi="10.1038/s41586-024-07335-x",
+    url="https://doi.org/10.1038/s41586-024-07335-x"
+}
+
+@inproceedings{federmann-etal-2022-ntrex,
+    title = "{NTREX}-128 {--} News Test References for {MT} Evaluation of 128 Languages",
+    author = "Federmann, Christian and Kocmi, Tom and Xin, Ying",
+    booktitle = "Proceedings of the First Workshop on Scaling Up Multilingual Evaluation",
+    month = "nov",
+    year = "2022",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.sumeval-1.4",
+    pages = "21--24"
+}
+
+@inproceedings{hu2022lora,
+  title={LoRA: Low-Rank Adaptation of Large Language Models},
+  author={Hu, Edward J and Yelong, Shen and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu},
+  booktitle={International Conference on Learning Representations},
+  year={2022},
+  url={https://openreview.net/forum?id=nZeVKeeFYf9}
+}
+
