--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[13pt]{article}
+\documentclass[13pt]{extarticle}
 \usepackage[a4paper, tmargin=2.5cm, lmargin=3cm, rmargin=3cm, bmargin=2.5cm]{geometry}
 \usepackage{hyperref}
 %\usepackage{multicol}
@@ -30,7 +30,8 @@
 \usepackage{algpseudocode}
 \usepackage{amsmath,amssymb} 
 \usepackage{placeins}
-
+\usepackage{setspace}
+\setstretch{1.15}
 
 \usetikzlibrary{positioning, arrows.meta, calc}
 
@@ -58,9 +59,9 @@
 \begin{titlepage}
     \thispagestyle{empty}
     \centering
-    \vspace{5cm}
-    {\Large \textbf{UNIVERSITY OF SCIENCE AND TECHNOLOGY OF HANOI}}\\[0.5cm]
-    {\large DEPARTMENT OF INFORMATION AND COMMUNICATION TECHNOLOGY}\\[2cm]
+    \vspace{2cm}
+    {\large \textbf{UNIVERSITY OF SCIENCE AND TECHNOLOGY OF HANOI}}\\[0.5cm]
+    {DEPARTMENT OF INFORMATION AND COMMUNICATION TECHNOLOGY}\\[2cm]
 
     \includegraphics[width=0.3\linewidth]{img/usth.jpg}
     \\[2cm]
